# partition-guard

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
bench/: bench_ipc.cpp  bench_scheduler.cpp
docs/: architecture.mmd
include/pg/: clock.hpp  config.hpp  health_monitor.hpp  partition.hpp  port.hpp  scheduler.hpp  trace.hpp
src/: clock.cpp  config.cpp  health_monitor.cpp  main.cpp  partition.cpp  port.cpp  scheduler.cpp  trace.cpp
tests/: test_clock.cpp  test_health.cpp  test_port.cpp  test_scheduler.cpp
